# hotel_ide_exercise

./: .gitignore  hotel.db  hotel.db.old  main.py  pyproject.toml
hotel/db/: db_interface.py  engine.py  models.py
hotel/operations/: amenities.py  bookings.py  customers.py  interface.py  rooms.py
hotel/routers/: amenities.py  bookings.py  customers.py  rooms.py
hotel/tests/: data_interface_stub.py  test_amenities.py  test_bookings.py  test_room.py  test_room_amenity.py
